# Craik

./: .bandit-baseline.json  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.codex/: goals.md
.github/workflows/: ci.yml  codeql.yml  docs-pages.yml  docs.yml  nightly.yml  package.yml  pages.yml  publish.yml  version-consistency.yml
docs/: architecture.md  build.md  differentiators.md  docusaurus.config.js  features.md  governance.md  implementation-plan.md  index.md  learn.md  limitations.md  mvp-roadmap.md  mvp.md  operate.md  package-lock.json  package.json  product-strategy.md  release-readiness-v0.1.0.md  release-readiness.md  roadmap.md  runtime-contracts.md  secure.md  sidebars.js  stigmem-integration.md  vision.md
docs/adr/: 0001-package-and-runtime-layout.md  0001-record-mvp-runner-scope.md  0002-provider-transport-and-mode-families.md  0003-secret-handling.md  0004-policy-envelope-shape.md  0005-receipts-and-handoffs-as-public-contracts.md  0006-package-and-runtime-layout.md  0007-credential-and-identity-architecture.md  index.md
docs/concepts/: case-files.md  governance.md  handoffs.md  intent-locks.md  memory-and-stigmem.md  project-model.md  receipts.md  single-agent-loop.md  work-graph.md
docs/guides/: agent-onboarding.md  authentication.md  capability-grants.md  community-plugins.md  community-skills.md  companion-app-security.md  configuring-craik-home.md  connecting-stigmem.md  context-budgeting.md  contradiction-inbox.md  development.md  doctor.md  evidence-and-assumptions.md  fail-open.md  gateway-troubleshooting.md  github-adapter.md  installation.md  learning-loops.md  local-store-migrations.md  mcp-ecosystem-compatibility.md  memory-diffs.md  memory-impact-preview.md  memory-proposals.md  project-registry.md  provider-routing.md  quickstart.md  release-management.md  runner-preview-workflows.md  running-policy-tests.md  scope-control.md  setup.md  single-agent-fixture-loop.md  stigmem-docs-demo.md  translated-docs.md  updating.md  using-case-files.md  writing-handoffs.md
docs/reference/: accessibility-requirements.md  adapter-packages.md  adjacent-runtime-bridge.md  adjacent-tool-migration.md  agent-roles.md  browser-tool-boundary.md  budget-quota-view.md  channel-adapter-contract.md  channel-allowlists.md  (+105 more)
scripts/: check_changed_file_strictness.py  check_doc_links.py  check_max_file_lines.py  check_public_docs_hygiene.py  check_release_readiness.py  check_release_tag.py  check_release_version.py  check_version_consistency.py  generate_cli_reference.py  quickstart_smoke.py  write_conformance_report.py
site/: CNAME  index.html  styles.css
tests/: test_accessibility.py  test_adapter_packages.py  test_adjacent_runtime_bridge.py  test_agent_roles.py  test_auth_api_key_source.py  test_auth_cli_bridge.py  test_auth_credential_pool.py  test_auth_local_cli_oauth.py  test_auth_profile_store.py  test_auth_profiles.py  test_auth_secret_ref.py  test_browser_tool_boundary.py  test_case_files.py  test_channel_adapters.py  test_channel_allowlist.py  test_channel_identity.py  test_channel_policy.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_context_debt.py  test_contracts.py  test_contradictions.py  test_critics.py  test_debates.py  test_delegations.py  test_demos.py  test_desktop_companion.py  test_docker_sandbox_backend.py  test_docs.py  test_doctor.py  test_ecosystem_compatibility.py  test_environment_receipts.py  test_exit_discipline.py  test_freshness.py  test_gateway.py  test_gateway_receipts.py  test_gemini_adapter.py  test_git_commands.py  test_github.py  (+102 more)
(+228 files in other folders)
